# GAI

./: .gitignore  CHANGELOG.md  Makefile  README.md  gai_model_v2.pkl  model_comparison.txt
.github/workflows/: ci.yml
gai/: __init__.py  tensor.py
gai/agent/: __init__.py  agent.py
gai/model/: gpt.py
gai/nn/: __init__.py  activation.py  (+8 more)
gai_legacy/: .gitignore  requirements.txt  start_agent.bat
rag_service/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
rag_service/data/documents/: russian_gpt.txt  russian_ml.txt  russian_rag.txt  sample.txt
rag_service/scripts/: fine_tune.py  ingest_docs.py
rag_service/src/: main.py  ui.py
rag_service/src/api/: chat.py  dependencies.py  documents.py  health.py
rag_service/src/core/: config.py
rag_service/src/models/: schemas.py
rag_service/src/rag/: embeddings.py  generator.py  retriever.py  vector_store.py
rag_service/tests/: test_api.py  test_rag.py
scripts/: build_exe.py  chat.py  chat_v3.py  chat_v5.py  chat_v6.py  chat_v7.py  chat_v8.py  clean_corpus.py  compare_v5_v6.py  download_all_wiki.py  download_more_wiki.py  download_wiki_corpus.py  download_wiki_dump.py  finetune_dialog.py  generate_data_v2.py  generate_data_v3.py  generate_dialog_data.py  generate_dialog_v2.py  generate_dialog_v4.py  test_bpe.py  test_chat.py  test_v4.py  test_v5.py  train.py  train_model_final.py  train_model_v2.py  train_model_v3.py  train_v4.py  train_v5.py  train_v5_continue.py  train_v6.py  train_v6_continue.py  train_v7.py  train_v8.py  train_v8_2.py  train_v8_3.py  train_v8_4.py
(+31 files in other folders)
